--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "mapclassify>=2.10.0",
     "marimo[recommended]>=0.17.2",
     "matplotlib>=3.10.7",
+    "pdfplumber>=0.11.7",
     "polars>=1.34.0",
+    "python-ags4>=1.1.0",
     "pyvista>=0.46.3",
+    "pyzmq>=27.1.0",
+    "striplog>=0.9.2",
 ]
