Make a start on creating a mapterhorn RTIN martini terrain provider. Something with the worker doesn't seem to quite work...

--- a/cesium-martini/package.json
+++ b/cesium-martini/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@macrostrat/cesium-martini": "^1.5.3",
     "cesium": "^1.135.0",
+    "ndarray": "^1.0.19",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
     "vite-plugin-cesium": "^1.2.23"
