--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "python-ags4>=1.1.0",
     "pyvista>=0.46.3",
     "pyzmq>=27.1.0",
+    "specklepy>=3.0.8",
+    "sqlmodel>=0.0.27",
     "striplog>=0.9.2",
 ]
 
